--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "functions": {
-    "api/**/*.py": {
-      "runtime": "vercel-python@3.11"
-    }
+    "api/**/*.py": { "runtime": "python3.11" }
   }
 }
