--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "functions": {
-    "api/**/*.py": { "runtime": "python3.11" }
+    "api/**/*.py": {
+      "runtime": "@vercel/python@3.11"
+    }
   }
 }
