--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "@vercel/python@3.11"
-    }
-  }
+  "builds": [
+    { "src": "api/**/*.py", "use": "@vercel/python@3.11" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
 }
