--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "builds": [
-    { "src": "api/**/*.py", "use": "@vercel/python@3.11" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" }
-  ]
+  "functions": {
+    "api/**/*.py": { "runtime": "python3.11" }
+  }
 }
