--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
+  "version": 2,
   "functions": {
-    "api/**/*.py": { "runtime": "python3.11" }
+    "api/**/*.py": {
+      "runtime": "vercel-python@0.6.1"
+    }
   }
 }
